# pycpfgen

./: README.md  cpf.py  pyproject.toml  qcpf.py  requirements.txt
